Test/BitVec/PolyMul.expected
Test/BitVec/PolyMul.lean:25:2: error: cannot translate fun a b => BitVec.xor a b, SMT-LIB does not support lambdas
